@@ -36,6 +36,7 @@ SOURCES += \
     Sources/DoomUtils.cpp \
     Sources/EditableListView.cpp \
     Sources/EngineDialog.cpp \
+    Sources/EngineProperties.cpp \
     Sources/EventFilters.cpp \
     Sources/ExtendedTreeView.cpp \
     Sources/FileSystemUtils.cpp \
@@ -61,6 +62,7 @@ HEADERS += \
     Sources/DoomUtils.hpp \
     Sources/EditableListView.hpp \
     Sources/EngineDialog.hpp \
+    Sources/EngineProperties.hpp \
     Sources/EventFilters.hpp \
     Sources/ExtendedTreeView.hpp \
     Sources/FileSystemUtils.hpp \
