@@ -46,6 +46,7 @@ class EngineDialog : public QDialog {
 	void updateName( const QString & text );
 	void updatePath( const QString & text );
 	void updateConfigDir( const QString & text );
+	void selectFamily( int familyIdx );
 
  private:
 
