@@ -2,6 +2,7 @@
 - moved the Audio and Video options to a new tab to allow shrinking the launcher window even more
 - added optional window displaying engine's standard output
 - added "Export to shortcut" feature for Windows
+- added options to select an engine family
 - made the map pack tree view display a horizontal scrollbar when the items are too wide to display instead of clipping
 - automatically expand parent directories of a selected map pack when preset is restored
 - fixed accidentally broken "Open File Location" feature
